5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4193/executions/1582_994.log
== TEST (2019-03-12 17:29:50) 
-- CODE:
print("")
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:30:04) 
-- CODE:
print("")
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:30:12) 
-- CODE:
print("")
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:39) 
-- CODE:
print("")Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("")Universidade Federal do Amazonas
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:31:56) 
-- CODE:
print("")Universidade Federal do Amazonas
-- EXECUTION TIME:
0.124939
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 1
    print("")Universidade Federal do Amazonas
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:33:05) 
-- CODE:
print("")Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("")Universidade Federal do Amazonas
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:33:09) 
-- CODE:
print("")Universidade Federal do Amazonas
-- EXECUTION TIME:
0.242987
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 1
    print("")Universidade Federal do Amazonas
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:34:23) 
-- CODE:
print("")Universidade Federal do Amazonas
-- EXECUTION TIME:
0.132785
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 1
    print("")Universidade Federal do Amazonas
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:35:40) 
-- CODE:
print("")Universidade Federal do Amazonas
-- EXECUTION TIME:
0.160725
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 1
    print("")Universidade Federal do Amazonas
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:35:44) 
-- CODE:
print("")Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("")Universidade Federal do Amazonas
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:36:42) 
-- CODE:
print("")Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("")Universidade Federal do Amazonas
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:13) 
-- CODE:
print("")Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("")Universidade Federal do Amazonas
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:25) 
-- CODE:
print("")Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print("")Universidade Federal do Amazonas
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:37:28) 
-- CODE:
print("")Universidade Federal do Amazonas
-- EXECUTION TIME:
0.139622
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 1
    print("")Universidade Federal do Amazonas
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:12) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:38:15) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.143882
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
